#236 Throw Error when attempting to remove an attribute that is listed in a site or classification scheme